more tidying